# SonIQ

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: build-media-tools.mjs  create-release-dmg.mjs  package-recognition-sidecar.mjs  recognition-adapter.cjs  recognition-adapter.test.cjs  soundtrack-model.test.mjs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.release.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: analysis.rs  commands.rs  lib.rs  main.rs  media.rs  models.rs  planning.rs  process.rs  progress.rs  recognition.rs  runtime.rs  scan.rs  source.rs  state.rs  tests.rs  tray.rs  tray_mac.m  util.rs
src/components/: Preloader.css  Preloader.tsx
src/components/ui/: button.tsx
src/features/export/: CueSheetCanvas.tsx  PlaylistExport.tsx  cue-sheet.css  playlist-export.css
src/features/moments/: MomentFinderCanvas.tsx  moment-finder.css
src/features/onboarding/: Onboarding.tsx  onboarding.css
src/features/scan/: ScanCanvases.tsx  intake.css  scanning.css
src/features/settings/: SettingsCanvas.tsx  settings.css
src/features/shell/: AppShell.tsx  shell.css
src/features/soundtrack/: RecoveryReviewCanvas.tsx  TrackArtwork.tsx  recovery-review.css  soundtrack-map.css  track-list.css
src/features/workspace/: canvas-primitives.css  layout.css  types.ts  utils.ts
src/lib/: fixture.ts  soundtrack-map.ts  soundtrack.ts  spotify-api.ts  spotify-auth.ts  workspace-settings.ts  youtube-api.ts
src/styles/: button.css  foundation.css  responsive-accessibility.css
