[package]
name = "soniq"
version = "0.1.3"
description = "A local first music discovery app for video"
authors = ["DawnSaju"]
edition = "2021"

[lib]
name = "soniq_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22.1"
objc2 = { version = "0.6.4", features = ["std"] }
objc2-foundation = { version = "0.3.2", features = ["NSURL", "NSData", "NSString"] }
reqwest = { version = "0.13", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
